plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'checkstyle'
	id 'io.freefair.lombok' version '5.3.0'
}

group = 'dev.gad'
version = '0.0.1-SNAPSHOT'
apply plugin: 'io.freefair.lombok'

java {
	sourceCompatibility = '21'
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	compileOnly 'org.projectlombok:lombok:1.18.12'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok:1.18.12'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	checkstyle 'com.puppycrawl.tools:checkstyle:10.3.1'
	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'
	implementation("com.mybatis-flex:mybatis-flex-spring-boot3-starter:1.7.7")
	annotationProcessor("com.mybatis-flex:mybatis-flex-processor:1.7.7")
	implementation 'com.mybatis-flex:mybatis-flex-core:1.7.7'
	implementation 'com.mybatis-flex:mybatis-flex-spring:1.7.7'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
}

checkstyle {
	// 配置Checkstyle规则
	configFile = file("${rootDir}/scripts/checkstyle.xml")

	// 配置需要检查的源代码目录
	sourceSets = [sourceSets.main]

	// 配置Checkstyle任务执行时的编码设置
	toolVersion = "10.3.1"
}

tasks.withType(JavaCompile) {
	options.fork = true
	options.forkOptions.jvmArgs += ["-Xmx512m", "-Dfile.encoding=UTF-8"]
	options.forkOptions.jvmArgs += ["--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"]
	options.forkOptions.jvmArgs += ["--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"]
}

tasks.named('test') {
	useJUnitPlatform()
}
